---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/struct.rs
description: "Rejects duplicate #struct keys"
expression: "{\"#struct\": {}, \"#struct\": {}}"
---
[31m[parser::object::duplicate-key] Error:[0m Duplicate key in object
   ╭─[ <unknown>:1:17 ]
   │
 1 │ {"#struct": {}, "#struct": {}}
   │  ────┬────      ────┬────  
   │      │              ╰────── Duplicate key
   │      │                     
   │      ╰───────────────────── First occurrence of `#struct`
   │ 
   │ Help: J-Expr does not allow duplicate keys in the same object. Each key must be unique.
───╯
